# tauri-plugin-secure-element

./: .editorconfig  .prettierignore  .prettierrc.json  CLAUDE.md  DESKTOP_IMPLEMENTATION_DESIGN.md  DESKTOP_IMPLEMENTATION_EVALUATION.md  MACOS_FFI_IMPLEMENTATION.md  MACOS_IMPLEMENTATION_STATUS.md  MACOS_TROUBLESHOOTING.md  PHASE1_MACOS_IMPLEMENTATION.md  README.md  SUMMARY.md  build-and-sign-dev.sh  claude.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-msvc-env.ps1  tag-release.sh  test-macos-build.sh  test-secure-enclave.js  view-adb-logs.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: macos-development.md  pre-beta-review-findings.md
docs/plans/: 2026-02-18-test-app-ux-redesign-plan.md  2026-02-18-test-app-ux-redesign.md
tauri-app/: package.json  pnpm-lock.yaml
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-plugin-secure-element/: .gitignore  .prettierignore  .swiftlint.yml  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-secure-element/android/: .editorconfig  build.gradle.kts  gradle.properties
tauri-plugin-secure-element/android/src/androidTest/java/: ExampleInstrumentedTest.kt  PluginInstrumentedTest.kt
tauri-plugin-secure-element/android/src/main/java/: ExamplePlugin.kt  Plugin.kt  SecureKeysPlugin.kt
tauri-plugin-secure-element/android/src/test/java/: PluginUnitTest.kt
tauri-plugin-secure-element/examples/tauri-app/: package.json  vite.config.js
tauri-plugin-secure-element/examples/tauri-app/src/: App.svelte
tauri-plugin-secure-element/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-secure-element/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-secure-element/guest-js/: index.ts  package.json  tsconfig.json
tauri-plugin-secure-element/ios/: Package.swift  README.md
tauri-plugin-secure-element/ios/Sources/: ExamplePlugin.swift  Plugin+Commands.swift  Plugin.swift  SecureEnclaveCore.swift
tauri-plugin-secure-element/ios/Tests/PluginTests/: PluginTests.swift
tauri-plugin-secure-element/macos/: Package.swift
tauri-plugin-secure-element/macos/Sources/: FFIBridge.swift  Plugin.swift
tauri-plugin-secure-element/permissions/: default.toml
tauri-plugin-secure-element/permissions/autogenerated/: reference.md
tauri-plugin-secure-element/permissions/autogenerated/commands/: check_secure_element_support.toml  delete_key.toml  generate_secure_key.toml  list_keys.toml  sign_data.toml  sign_with_key.toml
tauri-plugin-secure-element/permissions/schemas/: schema.json
tauri-plugin-secure-element/src/: commands.rs  der.rs  desktop.rs  error.rs  error_sanitize.rs  lib.rs  mobile.rs  models.rs  validation.rs  windows.rs  windows_hello.rs  windows_raii.rs
tauri-plugin-secure-element/src/desktop/: macos.rs  mod.rs
tauri-plugin-secure-element/swift/: SecureEnclaveCore.swift  secure_element.swift  secure_element_ffi.swift
tauri-plugin-tauri-plugin-secure-element/: README.md  package.json
tauri-plugin-tauri-plugin-secure-element/android/: build.gradle.kts
tauri-plugin-tauri-plugin-secure-element/guest-js/: index.ts
tauri-plugin-tauri-plugin-secure-element/ios/: README.md
tauri-plugin-tauri-plugin-secure-element/ios/Sources/: ExamplePlugin.swift
tauri-plugin-tauri-plugin-secure-element/permissions/autogenerated/: reference.md
tauri-plugin-tauri-plugin-secure-element/src/: lib.rs  mobile.rs
test-app/: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc.json  build-macos-dev.sh  embedded.provisionprofile  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  sign-dev.sh  vite.config.js
test-app/src/: App.svelte  cross-platform-test-vectors.json  index.html  main.js  style.css  styles.css
test-app/src-tauri/: Cargo.toml  Entitlements.plist  sign_app.sh  tauri.conf.json
test-app/src-tauri/capabilities/: default.json
test-app/src-tauri/src/: lib.rs  main.rs
test-app/src/lib/: CollapsibleCard.svelte  HardwareStatus.svelte  IntegrationTests.svelte  KeyManager.svelte  SignVerify.svelte  SpinnerButton.svelte  TestResultRow.svelte  TestVectors.svelte  index.js  utils.ts
(+4 files in other folders)
