[package]
name = "tauri-plugin-secure-element"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-secure-element"

[dependencies]
tauri = { version = "2.9.4" }
serde = "1.0"
thiserror = "2"
rand = "0.8"
hex = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"
core-foundation = "0.9"
base64 = "0.22"
sha2 = "0.10"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
