[package]
name = "test-app"
version = "0.1.0"
description = "Tauri Secure Element Plugin Example App"
authors = ["dkackman"]
license = "Apache-2.0"
repository = "https://github.com/dkackman/tauri-plugin-secure-element"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "test_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.9.4", features = [] }
tauri-plugin-secure-element = { path = "../../tauri-plugin-secure-element" }
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"

